--- a/static/404.html
+++ b/static/404.html
@@ -5,8 +5,9 @@
    ,,,,,,,,,,,,,,,,,,,,,,,  \   /
  / (  (  (  (  (  (  (  (  \( = =)
 <  (  (  (  (  (  (  (  (  / ( ^ )
- \ (__(__(__(__(__(__(__(__)   ~      HI!
-   ^  ^  ^  ^  ^  ^  ^  ^  ^
+ \ (__(__(__(__(__(__(__(__)   ~      HI bro!
+   ^  ^  ^  ^  ^  ^  ^  ^  ^          beware loops, i hate them, always get lost
+                                      keys form a final spell bro
 -->
 <head>
     <meta charset="UTF-8">
